--- a/.github/workflows/shapes.yml
+++ b/.github/workflows/shapes.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        cd shapes/v2
+        cd shapes
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        cd shapes/v2
+        cd shapes
         python3 tests.py
